<resources>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="rate_us">Rate us</string>
    <string name="my_work">My Work</string>
    <string name="new_project">New project</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="share">Share</string>
    <string name="compress">Compress</string>
    <string name="quality">Quality:</string>
    <string name="approximate_size">Approximate Size:</string>
    <string name="start">Start</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="Language">Language</string>
    <string name="setting">Setting</string>
    <string name="policy">Policy</string>
    <string name="feedback">Feedback</string>
</resources>