<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sticker"
    android:backgroundTint="#E6000000"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/polly_bold_700"
        android:includeFontPadding="false"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/compress"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/tv_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/polly_light_300"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/quality"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tv_approximate_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/polly_light_300"
            android:includeFontPadding="false"
            android:paddingVertical="@dimen/_2sdp"
            android:text="@string/approximate_size"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:id="@+id/ll_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/polly_bold_700"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_18ssp"
                android:text="@string/low"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/custom_radio"
                android:text=""
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/polly_bold_700"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_18ssp"
                android:text="@string/medium"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/custom_radio"
                android:text=""
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high"
                android:fontFamily="@font/polly_bold_700"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/custom_radio"
                android:text=""
                android:layout_gravity="end" />
        </LinearLayout>
    </RadioGroup>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/rgOptions"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv_Cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/polly_bold_700"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/img_btn_cancel"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_Start"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/polly_bold_700"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/btn_done_button"
            android:text="@string/start" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
