<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101014"
    android:paddingTop="15dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/polly_bold_700"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:fontFamily="@font/polly_bold_700"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/policy"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_policy" />


            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawableEnd="@drawable/ic_next_gray"
                android:drawablePadding="16dp"
                android:fontFamily="@font/polly_bold_700"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/Language"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_language" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:fontFamily="@font/polly_bold_700"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/share"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:fontFamily="@font/polly_bold_700"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/rate_us"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_rate" />

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/bg_item_setting"
                android:drawablePadding="16dp"
                android:fontFamily="@font/polly_bold_700"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/feedback"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_feedback" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>